<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Auto Haus Imports</string>
    <string name="action_settings">Settings</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string-array name="navigation_list">
        <item>Home</item>
        <item>Inventory</item>
        <item>Car Finder</item>
        <item>Specials</item>
        <item>Directions</item>
        <item>Contact Us</item>
    </string-array>

    <!-- hints -->
    <string name="firstName_hint">First Name</string>
    <string name="lastName_hint">Last Name</string>
    <string name="City_hint">City</string>
    <string name="State_hint">State</string>
    <string name="Email_hint">Email</string>
    <string name="phoneNumber_hint">phone Number</string>

</resources>
