<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:padding="5dp"
            android:layout_margin="10dp"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:inputType="text"
            android:background="@drawable/rounded_corners"
            android:hint="@string/firstName_hint" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:inputType="text"
            android:background="@drawable/rounded_corners"
            android:hint="@string/lastName_hint" />

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="30dp" 
            android:layout_margin="10dp"
            android:padding="5dp"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:background="@drawable/rounded_corners"
            android:hint="@string/City_hint"/>
        
        <EditText
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:background="@drawable/rounded_corners"
            android:hint="@string/State_hint"/>

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:background="@drawable/rounded_corners"
            android:hint="@string/phoneNumber_hint"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_corners"
            android:hint="@string/Email_hint" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="send"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>